<resources>
    <string name="app_name">MealPlanner</string>
    <string name="tv_login">Login</string>
    <string name="tv_login_welcome_message">It\'s great to have you back!</string>

    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="ic_home">Home</string>
    <string name="ic_search">Search</string>
    <string name="ic_bookmarks">Bookmarks</string>
    <string name="ic_notifications">Notifications</string>
    <string name="ic_profile">Profile</string>

    <string name="have_account">Already have an account</string>
    <string name="login">Log In</string>
    <string name="sign_with_google">Google</string>
    <string name="sign_with_facebook">Facebook</string>
    <string name="foodPlanner">Food Planner</string>
    <string name="signup">Sign Up</string>
    <string name="haveAccount">Already have an account ?</string>
    <string name="skip">Skip</string>
    <string name="btn_next">Next</string>
    <string name="sign">Sign Up</string>
    <string name="account">I already have an account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User Name</string>
    <string name="logOut">Log out</string>
    <string name="favorite">Favorite</string>
    <string name="planned">Planned Meals</string>
    <!--
    <string name="default_web_client_id">779451629410-b6b60re70pkjv3452tem1gd51lqhga8n.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id">873964266994101</string>
    <string name="fb_login_protocol_scheme">fb873964266994101</string>
    <string name="facebook_client_token">56789</string>
    <string name="favoriteMeal">Favorites Meals</string>
    <string name="egypt">Egyption</string>
    <string name="america">American</string>
    <string name="british">British</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm Your password</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>


    <string name="tv_you_may_also_like">You may also like</string>
    <string name="tv_daily_inspiration">Daily Inspiration</string>

    <string name="category">Categories</string>
    <string name="meals">Meals</string>
    <string name="ingediant">Ingrediants</string>
    <string name="add_to_week_plan">Week Plan</string>
    <string name="steps">Steps</string>
    <string name="area">Area</string>
    <string name="btn_addToCalendar">Add To Calendar</string>

    <string name="category">Categories</string>
    <string name="meals">Meals</string>
    <string name="ingediant">Ingrediants</string>

    <string name="tv_you_may_also_like">You may also like</string>
    <string name="tv_daily_inspiration">Daily Inspiration</string>



</resources>