<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.activities.MainActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/tv_login"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/tv_login_welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />



    <TextView
        android:id="@+id/tv_login_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_welcome_message"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintBottom_toTopOf="@id/et_layout_username"
        app:layout_constraintEnd_toEndOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        android:layout_marginTop="12dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="16dp"
        android:hint="@string/et_email"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/et_layout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/baseline_person_24">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/et_password"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/et_layout_username"
        app:layout_constraintStart_toStartOf="@id/et_layout_username"
        app:layout_constraintTop_toBottomOf="@id/et_layout_username"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:padding="14dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>