<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.WelcomeFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:paddingStart="20dp"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="290dp"
        android:layout_height="72dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/foodPlanner"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signWithGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767" />

    <Button
        android:id="@+id/btn_signWithFacebook"
        android:layout_width="165dp"
        android:layout_height="67dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#063970"
        android:drawableLeft="@drawable/facebook"
        android:paddingStart="60dp"
        android:contentDescription="Sign-up with a Facebook account"
        app:layout_constraintBottom_toBottomOf="@+id/btn_signWithGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_signWithGoogle"
        app:layout_constraintTop_toTopOf="@+id/btn_signWithGoogle"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/btn_signWithGoogle"
        android:layout_width="147dp"
        android:layout_height="71dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:paddingStart="40dp"
        android:drawablePadding="20dp"
        android:contentDescription="Sign-up with a Google account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/white"
        android:text="@string/signup"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="251dp"
        android:layout_height="41dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/haveAccount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>